--- a/ar_test.html
+++ b/ar_test.html
@@ -11,7 +11,8 @@
     <title>任意のページタイトル</title>
   </head>
   <body style="margin: 0; overflow: hidden">
-    <a-scene embedded arjs vr-mode-ui="enabled: false;"><a-entity gltf-model="#artest_01" rotation="90 90 90"></a-entity>
+    <a-scene embedded arjs vr-mode-ui="enabled: false;">
+	    <a-entity gltf-model="#artest_01" rotation="90 90 90"></a-entity>
 	    
       <!-- 3DCGモデルを読み込む -->
       <a-assets>
