--- a/ar_test.html
+++ b/ar_test.html
@@ -21,7 +21,7 @@
       <!-- マーカーの.pattファイルを読み込む -->
       <a-marker type="pattern" url="./asset/artest_01.patt">
         <!-- 3Dモデルを呼び出す -->
-        <a-entity gltf-model="#tiger"></a-entity>
+        <a-entity gltf-model="#artest_01"></a-entity>
       </a-marker>
 
       <!-- カメラを追加 -->
